--- a/index.html
+++ b/index.html
@@ -54,8 +54,8 @@
                     <p>Jeg valgte at tage Datamatiker Uddannelsen, da jeg gerne ville udvikle mere Backend. Det har givet mig et bredere skill set og en større forståelse for webudvikling.</p>
                 </div>
                 <div class="col-6 col-sm-6 col-xs-12">
-                    <img src="img/mig.jpg" alt="mig" class="col-12">
-                    <img src="img/skrivebord2.jpg" alt="Mit skrivebord" class="col-12 skrivebord2">
+                    <img src="img/mig.jpg" alt="mig" class="col-12 rounded">
+                    <img src="img/skrivebord2.jpg" alt="Mit skrivebord" class="col-12 skrivebord2 rounded">
                 </div>
             </div>
         </div>
@@ -64,24 +64,16 @@
 
     
     <section class="container" id="Portfolio">
-        <h2 class="text-center display-1 mt-5"> Projekter - Multimediedesigner</h2>
+        <h2 class="text-center display-1 mt-5 mb-5"> Projekter - Multimediedesigner</h2>
         <div class="row">
-            <div class="d-flex flex-wrap justify-content-between">
-                <!-- Række 1 -->
-                <div class="project w-30 mt-4">
-                    <a href="kyoto.html" class="w-100">
-                        <div class="col-12" style="margin-bottom:2vw">
-                            <img src="img/thumbnails_portfolio_kyoto.png" alt="kyoto thumbnail" class="col-12 rounded">
-                            <h3 class="text-center titel_portfolio"> Kyoto</h3>
-                        </div>
-                    </a>
-                </div>
+            <div id="mmd_projects" class="d-flex flex-wrap justify-content-between">
+                
             </div>
         </div>
     </section>
 
     <section id="kontakt" class="container mt-5">
-        <div class="row bg-white">
+        <div class="row bg-white rounded">
             <div class="wrapper_om col-12">
                 <div class="col-12">
 
