created project with style and javascript

--- a/index.html
+++ b/index.html
@@ -29,15 +29,15 @@
       </nav>
 
 
-    <div class="w-100">
-        <section id="Forside" class="row Forside splashbillede">
-                <div class="col-12 ">
-                    <h1 class="typing_carousel">Velkommen, mit navn er Sebastian <br>
-                        <span class="txt-rotate" data-period="500" data-rotate='["Jeg kan kode frontend.", "Jeg kan kode backend.", "Jeg kan arbejde med Databaser" ]'></span>
-                    </h1>
-                </div>
-        </section>
-    </div>
+    <section class="w-100">
+        <div id="Forside" class="row Forside splashbillede">
+            <div class="col-12 ">
+                <h1 class="typing_carousel">Velkommen, mit navn er Sebastian <br>
+                    <span class="txt-rotate" data-period="500" data-rotate='["Jeg kan kode frontend.", "Jeg kan kode backend.", "Jeg kan arbejde med Databaser" ]'></span>
+                </h1>
+            </div>
+        </div>
+    </section>
 
     <section id="Om">
         <div class="container mt-5">
@@ -51,7 +51,7 @@
                     Jeg brugte CMS programmet Wordpress. At få muligheden for at lave en webshop har lært mig en masse om wordpress og hvordan det fungerer. 
                     Derudover har det givet mig en viden om SEO og hvilke handelsbetingelser en webshop skal overholde, som jeg ikke ville få på min uddannelse. 
                     I dag er jeg webansvarlig og har til ansvar til driften af hjemmesiden.</p>
-                    <p>Jeg valgte at tage Datamatiker Uddannelsen, da jeg gerne ville udvikle mere Backend. Det har givet mig et bredere skill set og en større forståelse for webudvikling.</p>
+                    <p>Jeg valgte at tage Datamatiker Uddannelsen, da jeg gerne ville udvikle mere Backend. Det har givet mig et bredere skill set og en større forståelse for webudvikling. Lige pt. har jeg valgfag, hvor jeg har valgt: NodeJS, ASP.NET MVC og Python</p>
                 </div>
                 <div class="col-6 col-sm-6 col-xs-12">
                     <img src="img/mig.jpg" alt="mig" class="col-12 rounded">
@@ -89,9 +89,9 @@
 
                     <div class="Generelle_oplysninger">
                         <h4 class="text-center"> <strong> <em>Sebastian Storm </em> </strong></h4>
-                        <h4 class="text-center"> <strong> <em>Kea - Multimediedesigner</em> </strong></h4>
-                        <h4 class="text-center"> <strong> <em>Bopæl: Kokkedal </em> </strong></h4>
-                        <h4 class="text-center"> <strong> <em>Alder: 24 år </em> </strong></h4>
+                        <h4 class="text-center"> <strong> <em>Kea - Datamatiker</em> </strong></h4>
+                        <h4 class="text-center"> <strong> <em>Bopæl: Lyngby </em> </strong></h4>
+                        <h4 class="text-center"> <strong> <em>Alder: 27 år </em> </strong></h4>
                     </div>
 
                     <div class="boxRectangel mt-3 mb-3 col-md-12 col-sm-12"> </div>
@@ -109,8 +109,11 @@
                             <p>På Datamatiker Uddannelse har jeg arbejdet mere med backend og det tekniske aspekt i webudvikling. Her har jeg blandt andet arbejdet med Java og Spring</p>  
                             <h4 class="text-center"><strong>Sprog</strong></h4>
                             <ul class="skills_sprog">
-                                <li>Html, Css & javascript</li>
-                                <li>PHP, SQL, SASS</li>
+                                <li>Html</li>
+                                <li>CSS & SASS</li>
+                                <li>Javascript & Jquery</li>
+                                <li>PHP</li>
+                                <li>SQL</li>
                                 <li>Java</li>
                             </ul>
                         </div>
@@ -141,7 +144,7 @@
                             <ul style="list-style-type:disc">
                                 <li>Database</li>
                                 <li>Interface design</li>
-                                <li>Angular</li>
+                                <li>Fullstack development (HTML, JS, CCS & PHP)</li>
                                 <li>Web Security</li>
                                 <li>Web Environment</li>
                             </ul>
@@ -158,12 +161,14 @@
 
                             <p> Miami, USA (Januar - April 2016)</p>
 
-                            <br>
                             <h4><strong> CollectorsHome - Webansvarlig </strong></h4>
                             <p> (Marts 2017 - )</p>
 
-                            <h4><strong> BetterHome - Praktikant </strong></h4>
-                            <p> (Januar - August 2019)</p>
+                            <h4><strong> BetterHome - Praktikant & FrontEnd studentermedhjælper </strong></h4>
+                            <p> (Januar 2019 - August 2019)</p>
+
+                            <h4><strong> GoTutor - Praktikant & Assisterende Udvikler </strong></h4>
+                            <p> (August 2019 - April 2020)</p>
                         </div>
                     </div>
                 </div>
