--- a/index.html
+++ b/index.html
@@ -66,14 +66,14 @@
     <section class="container" id="Portfolio">
         <h2 class="text-center display-1 mt-5 mb-5"> Projekter - Multimediedesigner</h2>
         <div class="row">
-            <div id="mmd_projects" class="d-flex flex-wrap justify-content-between">
+            <div id="mmd_projects" class="projectsContainer">
                 
             </div>
         </div>
     </section>
 
-    <section id="kontakt" class="container mt-5">
-        <div class="row bg-white rounded">
+    <section id="kontakt" class="container mt-5 d-flex justify-content-center">
+        <div class="row bg-white rounded max-width-1024">
             <div class="wrapper_om col-12">
                 <div class="col-12">
 
