--- a/index.html
+++ b/index.html
@@ -63,17 +63,25 @@
 
 
     
-    <section class="container" id="Portfolio">
-        <h2 class="text-center display-1 mt-5 mb-5"> Projekter - Multimediedesigner</h2>
+    <section class="container mb-5 mt-5" id="Portfolio">
         <div class="row">
-            <div id="mmd_projects" class="projectsContainer">
-                
-            </div>
+            <h2 class="text-center display-1 mb-4"> Projekter - Multimediedesigner</h2>
+            <div id="mmd_projects" class="projectsContainer"></div>
+        </div>
+
+        <div class="row mt-5">
+            <h2 class="text-center display-1 mb-4"> Projekter - Webudvikler</h2>
+            <div id="webDev_projects" class="projectsContainer"></div>
+        </div>
+
+        <div class="row mt-5">
+            <h2 class="text-center display-1 mb-4"> Projekter - Datamatiker</h2>
+            <div id="dataMat_projects" class="projectsContainer"></div>
         </div>
     </section>
 
     <section id="kontakt" class="container mt-5 d-flex justify-content-center">
-        <div class="row bg-white rounded max-width-1024">
+        <div class="row bg-white rounded max-width-1024 mt-5">
             <div class="wrapper_om col-12">
                 <div class="col-12">
 
@@ -134,9 +142,7 @@
                                 <li>html, css, Bootstrap og javascript</li>
                                 <li>Design Teorier</li>
                                 <li>Design Thinking</li>
-                                <li>Dramaturgi</li>
                                 <li>photoshop, illustrator, Indesign, Adobe XD</li>
-                                <li>Premiere Pro, After Effects & Audition</li>
                                 <li>Farveteori</li>
                             </ul>
 
