--- a/project.html
+++ b/project.html
@@ -34,10 +34,10 @@
                 </div>
             </div>
         </div>
-        <div class="row bg-white d-flex text-center w-100 m-0 splashInfo">
-            <div class="col-12 col-md-4"><i class="fa-solid fa-calendar-week"></i> <span id="weeks" class="ms-2">2 uger</span></div>
-            <div class="col-12 col-md-4"><i class="fa-solid fa-layer-group"></i> <span id="stack" class="ms-2">javascript, HTML & CSS</span></div>
-            <div class="col-12 col-md-4"><i class="fa-solid fa-graduation-cap"></i> <span id="education" class="ms-2">Multimediedesigner</span></div>
+        <div class="row bg-white d-flex text-center w-100 m-0 splashInfo border-top border-dark border-2">
+            <div class="col-12 col-md-4" style="margin: auto 0;"><i class="fa-solid fa-calendar-week"></i> <span id="weeks" class="ms-2">2 uger</span></div>
+            <div class="col-12 col-md-4" style="margin: auto 0;"><i class="fa-solid fa-layer-group"></i> <span id="stack" class="ms-2">javascript, HTML & CSS</span></div>
+            <div class="col-12 col-md-4" style="margin: auto 0;"><i class="fa-solid fa-graduation-cap"></i> <span id="education" class="ms-2">Multimediedesigner</span></div>
         </div>
     </section>
 
@@ -89,7 +89,7 @@
             const sideImage = document.getElementById("projectSideImg");
             sideImage.src = "img/" + project.thumbnail
             const sideImageHeight = document.getElementById("purpose_desc").clientHeight;
-            sideImage.style.height = sideImageHeight+"px"
+            sideImage.style.height = sideImageHeight+50+"px"
             
         })
     </script>
