added the last projects and did some responsive css

--- a/index.html
+++ b/index.html
@@ -42,18 +42,18 @@
     <section id="Om">
         <div class="container mt-5">
             <div class="row">
-                <div class="col-6 col-sm-6 col-xs-12 hojre_om">
+                <div class="col-12 col-md-6">
                     <h2 class="text-center display-1"> Om mig</h2>
                     <h3 class="omMig_h2">Jeg studerer som Datamatiker på København Erhvervsakademi</h3>
                     <p class="mt-2">Når jeg ikke studerer til Datamatiker er jeg sammen med vennerne eller familien. Sport interesser mig meget, især fodbold og basketball. Sporten har gjort mig målbevidst og udholdende, som jeg har overført til mine studier.</p>
                     <p>Jeg har en uddannelse som Multimediedesigner og Webudvikler på Københavns Erhvervsakademi, hvor jeg specialiserede mig i frontend kodning. I min tid som Multimediedesigner og Webudvikler har jeg været i praktik hos BetterHome & GoTutor, hvor jeg fik til opgave at opretholde og updater deres hjemmeside og applikationer</p>
-                    <p>I Marts 2017 fik jeg muligheden for at lave en lille webshop for <a target="_blank" href="https://www.collectorshome.dk/">CollectorsHome</a>. 
+                    <p class="d-none_mobile">I Marts 2017 fik jeg muligheden for at lave en lille webshop for <a target="_blank" href="https://www.collectorshome.dk/">CollectorsHome</a>. 
                     Jeg brugte CMS programmet Wordpress. At få muligheden for at lave en webshop har lært mig en masse om wordpress og hvordan det fungerer. 
                     Derudover har det givet mig en viden om SEO og hvilke handelsbetingelser en webshop skal overholde, som jeg ikke ville få på min uddannelse. 
                     I dag er jeg webansvarlig og har til ansvar til driften af hjemmesiden.</p>
                     <p>Jeg valgte at tage Datamatiker Uddannelsen, da jeg gerne ville udvikle mere Backend. Det har givet mig et bredere skill set og en større forståelse for webudvikling. Lige pt. har jeg valgfag, hvor jeg har valgt: NodeJS, ASP.NET MVC og Python</p>
                 </div>
-                <div class="col-6 col-sm-6 col-xs-12">
+                <div class="col-12 col-md-6">
                     <img src="img/mig.jpg" alt="mig" class="col-12 rounded">
                     <img src="img/skrivebord2.jpg" alt="Mit skrivebord" class="col-12 skrivebord2 rounded">
                 </div>
@@ -104,12 +104,9 @@
 
                     <div class="boxRectangel mt-3 mb-3 col-md-12 col-sm-12"> </div>
                     <h2 class="text-center"> <strong>CV</strong> </h2>
-                    <div class="d-flex justify-content-between mt-4">
-                        <div class="profil w-30">
-                            <div class="cirkel center-block">
-                                <h5>Profil</h5> 
-                            </div>
-                            <h4 class="text-center"><strong> Kompetencer </strong></h4>
+                    <div class="d-flex justify-content-between flex-wrap mt-4">
+                        <div class="profil col-12 col-lg-4">
+                            <h4 class="text-center"><strong> Kompetencer</strong></h4>
                             <p>Jeg ser mig selv som lidt af en “nørd” , da jeg er nysgerrig efter hele tiden at udvikle mine kompetencer i webudvikling. 
                             En af mine store forcer er at jeg ikke giver så let op. f.eks. hvis jeg har et kodning problem, så vil jeg løse det før jeg gør noget andet. 
                             Jeg er vant til at arbejde i teams, da jeg har gjort det siden gymnasiet. Dog er jeg også god til at arbejde selvstændigt. </p>
@@ -126,10 +123,8 @@
                             </ul>
                         </div>
 
-                        <div class="uddannelse w-30">
-                            <div class="cirkel center-block">
-                                <h5>Uddannelse</h5> 
-                            </div>
+                        <div class="uddannelse col-12 col-lg-4">
+                            <h4 class="text-center"><strong> Uddannelse</strong></h4>
                             <h4><strong> Htx - komm/it & design </strong></h4>
 
                             <p> Erhvervsskolen Nordsjælland
@@ -159,10 +154,8 @@
 
                         </div>
 
-                        <div class="Erhvervserfaring w-30">
-                            <div class="cirkel center-block">
-                                <h5>Erhvervserfaring</h5> 
-                            </div>
+                        <div class="Erhvervserfaring col-12 col-lg-4">
+                            <h4 class="text-center"><strong>Erhvervserfaring</strong></h4>
                             <h4><strong> Best Doctors - Praktikant </strong></h4>
 
                             <p> Miami, USA (Januar - April 2016)</p>
