updated project.json and a little change in index

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                 </div>
                 <div class="col-12 col-md-6">
                     <img src="img/mig.jpg" alt="mig" class="col-12 rounded">
-                    <img src="img/skrivebord2.jpg" alt="Mit skrivebord" class="col-12 skrivebord2 rounded">
+                    <img src="img/skrivebord2.jpg" alt="Mit skrivebord" class="col-12 skrivebord2 rounded mt-5">
                 </div>
             </div>
         </div>
