added more responsive css for mobile view

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
     <nav class="navbar navbar-expand-lg navbar-light">
         <div class="container-fluid">
-            <a class="navbar-brand" href="#Forside"> <img src="img/Asset%202.png" alt="Logo" style="width:40px;" class="logo_menubar"></a>
+            <a class="navbar-brand" href="index.html"> <img src="img/Asset%202.png" alt="Logo" style="width:40px;" class="logo_menubar"></a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
             </button>
@@ -40,10 +40,10 @@
     </section>
 
     <section id="Om">
-        <div class="container mt-5">
+        <div class="container mt-4 mt-md-5">
             <div class="row">
                 <div class="col-12 col-md-6">
-                    <h2 class="text-center display-1"> Om mig</h2>
+                    <h2 class="display-1"> Om mig</h2>
                     <h3 class="omMig_h2">Jeg studerer som Datamatiker på København Erhvervsakademi</h3>
                     <p class="mt-2">Når jeg ikke studerer til Datamatiker er jeg sammen med vennerne eller familien. Sport interesser mig meget, især fodbold og basketball. Sporten har gjort mig målbevidst og udholdende, som jeg har overført til mine studier.</p>
                     <p>Jeg har en uddannelse som Multimediedesigner og Webudvikler på Københavns Erhvervsakademi, hvor jeg specialiserede mig i frontend kodning. I min tid som Multimediedesigner og Webudvikler har jeg været i praktik hos BetterHome & GoTutor, hvor jeg fik til opgave at opretholde og updater deres hjemmeside og applikationer</p>
@@ -80,8 +80,8 @@
         </div>
     </section>
 
-    <section id="kontakt" class="container mt-5 d-flex justify-content-center">
-        <div class="row bg-white rounded max-width-1024 mt-5">
+    <section id="kontakt" class="container mt-4 mt-md-5 d-flex justify-content-center">
+        <div class="row bg-white rounded max-width-1024 mt-4 mt-md-5">
             <div class="wrapper_om col-12">
                 <div class="col-12">
 
