--- a/project.html
+++ b/project.html
@@ -13,7 +13,7 @@
 
     <nav class="navbar navbar-expand-lg navbar-light">
         <div class="container-fluid">
-            <a class="navbar-brand" href="#Forside"> <img src="img/Asset%202.png" alt="Logo" style="width:40px;" class="logo_menubar"></a>
+            <a class="navbar-brand" href="index.html"> <img src="img/Asset%202.png" alt="Logo" style="width:40px;" class="logo_menubar"></a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
             </button>
@@ -29,7 +29,7 @@
         <div class="row project-splashbillede">
             <div class="col-12 d-flex justify-content-center align-items-center text-center flex-column">
                 <div class="projectOverlay">
-                    <h1 id="projectTitle" class="mb-4"></h1>
+                    <h1 id="projectTitle" class="mb-2"></h1>
                     <a id="projectTitleAtag" class="btn btn-white mb-0" href="/"></a>
                     <a id="projectTitleAtag2" class="btn btn-white mb-0" href="/"></a>
                 </div>
@@ -42,7 +42,7 @@
         </div>
     </section>
 
-    <section class="container mt-5">
+    <section class="container mt-4 mt-md-5">
         <div class="row">
             <h2>Formål</h2>
             <div class="col-12 d-flex flex-wrap">
