--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         <div id="Forside" class="row Forside splashbillede">
             <div class="col-12 ">
                 <h1 class="typing_carousel">Velkommen, mit navn er Sebastian <br>
-                    <span class="txt-rotate" data-period="500" data-rotate='["Jeg kan kode frontend.", "Jeg kan kode backend.", "Jeg kan arbejde med Databaser" ]'></span>
+                    <span class="txt-rotate" data-period="500" data-rotate='["Jeg kan kode frontend.", "Jeg kan kode backend.", "Jeg kan arbejde med Databaser." ]'></span>
                 </h1>
             </div>
         </div>
@@ -43,15 +43,15 @@
         <div class="container mt-4 mt-md-5">
             <div class="row">
                 <div class="col-12 col-md-6">
-                    <h2 class="display-1"> Om mig</h2>
-                    <h3 class="omMig_h2">Jeg studerer som Datamatiker på København Erhvervsakademi</h3>
-                    <p class="mt-2">Når jeg ikke studerer til Datamatiker er jeg sammen med vennerne eller familien. Sport interesser mig meget, især fodbold og basketball. Sporten har gjort mig målbevidst og udholdende, som jeg har overført til mine studier.</p>
-                    <p>Jeg har en uddannelse som Multimediedesigner og Webudvikler på Københavns Erhvervsakademi, hvor jeg specialiserede mig i frontend kodning. I min tid som Multimediedesigner og Webudvikler har jeg været i praktik hos BetterHome & GoTutor, hvor jeg fik til opgave at opretholde og updater deres hjemmeside og applikationer</p>
+                    <h2 class="display-1">Om mig</h2>
+                    <h3 class="omMig_h2">Jeg studerer som Datamatiker på Københavns Erhvervsakademi</h3>
+                    <p class="mt-2">Når jeg ikke studerer til Datamatiker, er jeg sammen med vennerne eller familien. Sport interesserer mig meget, især fodbold og basketball. Sporten har gjort mig målbevidst og udholdende, hvilket jeg også har overført til mine studier.</p>
+                    <p>Jeg har en uddannelse som Multimediedesigner og Webudvikler på Københavns Erhvervsakademi, hvor jeg specialiserede mig i frontend kodning. I min tid som Multimediedesigner og Webudvikler har jeg været i praktik hos BetterHome & GoTutor, hvor jeg fik til opgave at opretholde og opdatere deres hjemmeside og applikationer.</p>
                     <p class="d-none_mobile">I Marts 2017 fik jeg muligheden for at lave en lille webshop for <a target="_blank" href="https://www.collectorshome.dk/">CollectorsHome</a>. 
                     Jeg brugte CMS programmet Wordpress. At få muligheden for at lave en webshop har lært mig en masse om wordpress og hvordan det fungerer. 
                     Derudover har det givet mig en viden om SEO og hvilke handelsbetingelser en webshop skal overholde, som jeg ikke ville få på min uddannelse. 
-                    I dag er jeg webansvarlig og har til ansvar til driften af hjemmesiden.</p>
-                    <p>Jeg valgte at tage Datamatiker Uddannelsen, da jeg gerne ville udvikle mere Backend. Det har givet mig et bredere skill set og en større forståelse for webudvikling. Lige pt. har jeg valgfag, hvor jeg har valgt: NodeJS, ASP.NET MVC og Python</p>
+                    I dag er jeg webansvarlig og sørger for driften af hjemmesiden.</p>
+                    <p>Jeg valgte at tage Datamatiker Uddannelsen, da jeg gerne ville udvikle mere backend. Det har givet mig et bredere skill set og en større forståelse for webudvikling. Lige pt. har jeg valgfag, hvor jeg har valgt: NodeJS, ASP.NET MVC og Python</p>
                 </div>
                 <div class="col-12 col-md-6">
                     <img src="img/mig.jpg" alt="mig" class="col-12 rounded">
@@ -106,12 +106,12 @@
                     <h2 class="text-center"> <strong>CV</strong> </h2>
                     <div class="d-flex justify-content-between flex-wrap mt-4">
                         <div class="profil col-12 col-lg-4">
-                            <h4 class="text-center"><strong> Kompetencer</strong></h4>
-                            <p>Jeg ser mig selv som lidt af en “nørd” , da jeg er nysgerrig efter hele tiden at udvikle mine kompetencer i webudvikling. 
-                            En af mine store forcer er at jeg ikke giver så let op. f.eks. hvis jeg har et kodning problem, så vil jeg løse det før jeg gør noget andet. 
+                            <h4 class="text-center"><strong>Kompetencer</strong></h4>
+                            <p>Jeg ser mig selv som lidt af en “nørd”, da jeg er nysgerrig efter hele tiden at udvikle mine kompetencer i webudvikling. 
+                            En af mine store forcer er, at jeg ikke giver så let op. Hvis jeg f.eks har et kodningsproblem, vil jeg løse det, før jeg gør noget andet. 
                             Jeg er vant til at arbejde i teams, da jeg har gjort det siden gymnasiet. Dog er jeg også god til at arbejde selvstændigt. </p>
-                            <p>Som multimediedesigner- og Webudvikleruddannelsen har jeg specialiseret indenfor frontendudvikling med sprog som html, css, javascript osv.</p>
-                            <p>På Datamatiker Uddannelse har jeg arbejdet mere med backend og det tekniske aspekt i webudvikling. Her har jeg blandt andet arbejdet med Java og Spring</p>  
+                            <p>Som multimediedesigner- og webudvikler har mig specialiseret indenfor frontendudvikling med sprog som html, css, javascript osv.</p>
+                            <p>På Datamatiker Uddannelsen har jeg arbejdet mere med backend og det tekniske aspekt i webudvikling. Her har jeg blandt andet arbejdet med Java og Spring</p>  
                             <h4 class="text-center"><strong>Sprog</strong></h4>
                             <ul class="skills_sprog">
                                 <li>Html</li>
@@ -131,21 +131,21 @@
                                 <br>(2012-2015)
                             </p>
 
-                            <h4><strong> PÅ MMD (KEA) har jeg arbejde med følgende</strong></h4>
+                            <h4><strong> PÅ MMD (KEA) har jeg arbejdet med følgende</strong></h4>
                             <ul style="list-style-type:disc">
                                 <li>Målgruppeanalyser</li>
-                                <li>html, css, Bootstrap og javascript</li>
+                                <li>Html, CSS, Bootstrap og javascript</li>
                                 <li>Design Teorier</li>
                                 <li>Design Thinking</li>
                                 <li>photoshop, illustrator, Indesign, Adobe XD</li>
                                 <li>Farveteori</li>
                             </ul>
 
-                            <h4><strong> Som Webudvikler (KEA) har jeg arbejde med følgende</strong></h4>
+                            <h4><strong> Som Webudvikler (KEA) har jeg arbejdet med følgende</strong></h4>
                             <ul style="list-style-type:disc">
                                 <li>Database</li>
                                 <li>Interface design</li>
-                                <li>Fullstack development (HTML, JS, CCS & PHP)</li>
+                                <li>Fullstack development (HTML, JS, CSS & PHP)</li>
                                 <li>Web Security</li>
                                 <li>Web Environment</li>
                             </ul>
@@ -163,7 +163,7 @@
                             <h4><strong> CollectorsHome - Webansvarlig </strong></h4>
                             <p> (Marts 2017 - )</p>
 
-                            <h4><strong> BetterHome - Praktikant & FrontEnd studentermedhjælper </strong></h4>
+                            <h4><strong> BetterHome - Praktikant & Frontend studentermedhjælper </strong></h4>
                             <p> (Januar 2019 - August 2019)</p>
 
                             <h4><strong> GoTutor - Praktikant & Assisterende Udvikler </strong></h4>
